Fix margin collapse problems

--- a/app/assets/stylesheets/bem/container/_container.scss
+++ b/app/assets/stylesheets/bem/container/_container.scss
@@ -3,4 +3,5 @@
   max-width: 960px;
   padding: 0px;
   margin: 0px;
+  overflow:auto;
 }
